# free.simd

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/boost/simd/algorithm/: iota.hpp  replace.hpp  replace_if.hpp
include/boost/simd/arch/x86/sse2/simd/function/: extract.hpp
include/boost/simd/detail/internal/: _config.hpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt
